[PPANTT-129] fix api keys check